--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -222,6 +222,14 @@
                                             HeightRequest="36"
                                             BackgroundColor="#2196F3"
                                             VerticalOptions="Center" />
+                                    <Button Text="Delete"
+                                            Command="{Binding Source={RelativeSource AncestorType={x:Type local:ActionPage}}, Path=DeleteActionCommand}"
+                                            CommandParameter="{Binding .}"
+                                            WidthRequest="80"
+                                            HeightRequest="36"
+                                            BackgroundColor="#FF5252"
+                                            TextColor="White"
+                                            VerticalOptions="Center" />
                                 </StackLayout>
                             </Grid>
                             <Frame.GestureRecognizers>
