--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -174,6 +174,14 @@
                                                TextColor="Gray"
                                                Margin="5,0"
                                                VerticalOptions="Center" />
+                                        <Label Text="{Binding FormattedSize}"
+                                               TextColor="#1565C0"
+                                               FontAttributes="Bold"
+                                               VerticalOptions="Center" />
+                                        <Label Text="|"
+                                               TextColor="Gray"
+                                               Margin="5,0"
+                                               VerticalOptions="Center" />
                                         <Label Text="{Binding ActionType}"
                                                TextColor="Gray"
                                                VerticalOptions="Center" />
